math-core/src/snapshots/math_core__tests__scriptstyle_relation.snap
---
source: math-core/src/lib.rs
expression: "{\\scriptstyle 1=1}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mn>1</mn>
        <mo lspace="0" rspace="0">=</mo>
        <mn>1</mn>
    </mrow>
</math>
