math-core/src/snapshots/math_core__tests__simple_accent.snap
---
source: math-core/src/lib.rs
expression: "\\dot{x}"
---
<math>
    <mover accent="true">
        <mi>x</mi>
        <mo>˙</mo>
    </mover>
</math>
