math-core/src/snapshots/math_core__tests__simple_binomial_coefficient.snap
---
source: math-core/src/lib.rs
expression: "\\binom12"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac linethickness="0">
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
