math-core/src/snapshots/math_core__tests__simple_expression.snap
---
source: math-core/src/lib.rs
expression: "x = 3+\\alpha"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mn>3</mn>
    <mo>+</mo>
    <mi>α</mi>
</math>
