math-core/src/snapshots/math_core__tests__simple_fraction.snap
---
source: math-core/src/lib.rs
expression: "\\frac{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
