math-core/src/snapshots/math_core__tests__simple_integral.snap
---
source: math-core/src/lib.rs
expression: "\\int dx"
---
<math>
    <mo>∫</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
