math-core/src/snapshots/math_core__tests__simple_overset.snap
---
source: math-core/src/lib.rs
expression: "\\overset{n}{X}"
---
<math>
    <mover>
        <mi>X</mi>
        <mi>n</mi>
    </mover>
</math>
