math-core/src/snapshots/math_core__tests__sine_at_group_start.snap
---
source: math-core/src/lib.rs
expression: "x{\\sin x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0" rspace="0.1667em">sin</mo>
        <mi>x</mi>
    </mrow>
</math>
