math-core/src/snapshots/math_core__tests__sine_at_right.snap
---
source: math-core/src/lib.rs
expression: "x\\left(x\\sin \\right)x"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mi>x</mi>
            <mo lspace="0.1667em" rspace="0">sin</mo>
        </mrow>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
