math-core/src/snapshots/math_core__tests__sine_function.snap
---
source: math-core/src/lib.rs
expression: "\\sin x"
---
<math>
    <mo lspace="0.1667em" rspace="0.1667em">sin</mo>
    <mi>x</mi>
</math>
